--- a/src/styles/carousel.styl
+++ b/src/styles/carousel.styl
@@ -13,8 +13,8 @@ body
     position relative
     overflow hidden
     @media $mobile
-      width 400px
-      height 250px
+      width 328px
+      height 240px
 
     &__controls
     &__activator
