--- a/src/styles/common.styl
+++ b/src/styles/common.styl
@@ -122,7 +122,7 @@ hr
   @media $tablet
     margin 0 auto
   @media $mobile
-    width 422px
+    width 350px
     margin 40px auto 0 auto
 
 .profile
